# AetherOS

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE  PRIVACY.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
cli/: aether.mjs
config/: accounts.json  audit.json  backup.json  boot-targets.json  crash-reporter.json  ecosystem.json  event-bus.json  experience.json  network.json  policy-engine.json  recovery-policy.json  registry-hives.json  restore-points.json  security-hardening.json  startup-apps.json  storage.json  system.json  task-scheduler.json  updates.json
docs/: ARCHITECTURE.md  BACKEND_COMMANDS.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  FEATURE_MATRIX.md  GITHUB_SETUP.md  INDEX.md  KERNEL_MODEL.md  KEYBOARD_SHORTCUTS.md  PHASE_1_FEATURES.md  PROJECT_STATUS.md  RFC_PROCESS.md  ROADMAP.md  SYSTEM_LAYOUT.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md  VISION.md  admin-plane.md  boot-service-orchestration.md  recovery-supervisor.md  security-hardening.md  system-operations-expansion.md  windows-plus-ecosystem.md
drivers/: drivers.manifest.json
kernel/: kernel.manifest.json
pkg/: dependency-lock.json  registry.json
release/: README.md  RELEASE_NOTES_v1.1.2.md  SHA256SUMS.txt
security/: policy.json
services/: services.manifest.json
src/: accountManager.ts  appRuntime.ts  (+41 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+14 files in other folders)
