[package]
name = "aetheros"
version = "1.1.3"
description = "AetherOS Phase 1 desktop shell"
authors = ["AetherOS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
